# apps/cloud/lunora/_generated/openapi.json
@@ -5178,13 +5178,28 @@
                         "type": "string",
                         "x-lunora-table": "deployments"
                       },
+                      "errorOnly": {
+                        "type": "boolean"
+                      },
+                      "from": {
+                        "type": "number"
+                      },
+                      "functionPath": {
+                        "type": "string"
+                      },
                       "limit": {
+                        "type": "number"
+                      },
+                      "minDurationMs": {
                         "type": "number"
                       },
                       "organizationId": {
                         "description": "Id<\"organizations\">",
                         "type": "string",
                         "x-lunora-table": "organizations"
+                      },
+                      "to": {
+                        "type": "number"
                       }
                     },
                     "required": [
